# vix_utils

./: .gitignore  LICENSE  README.md  VIX1Y_Data.csv  build.cmd  cboe_futures_dates.py  m2m2.py  publish_package_pypi.ps1  publish_package_testpypi.ps1  pyproject.toml  test.bat  test.ps1  vix_cash_term_structure.py  vix_futures_term_struture.py  vix_term_plot_sample.py  vixutil.py
.github/workflows/: python_publish.yml
docs/: conf.py  index.rst
examples/: a_loadframes.py  b_trade_and_settlement_frame.py  c_plot_vix_term_structure.py  sample_utils.py
src/examples/: b_trade_and_settlement_frame.py  c_plot_vix_term_structure.py  sample_utils.py
src/vix-utils/: vix_futures_term_struture.py
src/vix_utils/: __init__.py  continuous_maturity.py  data_notes.md  download_vix_futures.py  example_plot_vix_term_structure.py  futures_utils.py  location.py  old_download_vix_futures.py  play.py  vix_cash_term_structure.py  vix_futures_dates.py  vix_futures_term_structure.py  vix_futures_term_struture.py  vix_term_plot_sample.py  vixutil.py
src/vix_utils/examples/: a_loadframes.py  a_t.ipynb  c_plot_vix_term_structure.py  hello_x.py  sample_load_data.py  sample_plots.py  vix_utils use in Jupyter.ipynb  vix_utils xarray.ipynb  vix_utils.ipynb
test/: __init__.py  test_cfe_open_dates.py  test_constant_maturity_weights.py  test_monthly_settlements.py  test_monthly_tenor.py  test_read_vix_futures_history.py  test_trade_and_settlement_dates.py  test_vx30_weights.py  test_weekly_settlements.py  test_weekly_settlments.py
test/data_samples/200705_200805_futures/: 2007-05-16.m_5.CFE_VX_K2007.csv  2007-05-16.m_5.CFE_VX_K2007.pkl  2008-05-21.m_5.CFE_VX_K2008.csv  2008-05-21.m_5.CFE_VX_K2008_jun1_2006.csv
utils/: futures_utils.py
