[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
keywords=["vix","volatility","pandas","vix term structure","cboe"]
name = "vix_utils"
authors = [{name="Doug Ransom",email = "doug@ransom.vip"}]
description="Provide VIX Cash and Futures Term Structure as Pandas dataframes"
classifiers = ["License :: OSI Approved :: MIT License",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Financial and Insurance Industry",
	"Topic :: Office/Business :: Financial :: Investment"]
version = '0.0.0.0.5'
readme="README.md"
requires-python=">=3.11"
dependencies= [
    "pandas",
    "pandas-market-calendars",
    "aiofiles",
    "aiohttp[speedups]",
    "matplotlib",
    "scipy",
    "openpyxl",
    "appdirs"]


[project.optional-dependencies]

[project.scripts]
vixutil = "vix_utils.vixutil:main"
[project.urls]
home-page = "https://github.com/dougransom/vix_utils"